# raspberry-tv

./: CLAUDE.md  README.md  dashboard.html  manager.html  pillow_slideshow.py  playbook.yml  pygame_diagnostic.py  test_chrome.py
files/: hdmi_sleep.py  pillow_slideshow.py  slideshow.py
roles/app/files/: pillow_slideshow.py
roles/app/tasks/: main.yml
roles/app/templates/: slideshow_rs.service.j2
roles/common/tasks/: main.yml
roles/hdmi/handlers/: main.yml
roles/hdmi/tasks/: main.yml
roles/network/tasks/: main.yml
roles/time/tasks/: main.yml
slideshow_rs/: Cargo.toml
slideshow_rs/src/: config.rs  couchdb_client.rs  errors.rs  main.rs  media_pipeline.rs  model.rs  state_manager.rs  text_renderer.rs
templates/: hdmi_sleep.service.j2  slideshow.conf.j2  slideshow.service.j2
vars/: main.yml
