[package]
name = "slideshow_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", features = ["persistence"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
configparser-rust = "0.5.0"
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
egui_extras = { version = "0.27.2", features = ["image"] } # For RetainedImage
chrono = { version = "0.4.38", features = ["serde"] } # For datetime replacement and status updates
ffmpeg-next = "7.0.0" # Check for latest compatible version
tempfile = "3.10.1" # For temporary video files
headless_chrome = "1.0.10" # Check for latest version, consider features like "fetch" if needed for other things.
